version 1.3.1
- fixed bug concerning covariates

version 1.3.0
- Integration of experimental monthly version

version 1.2.0
- Introduced time-window-based indexing
- Automatically converts non-factor covariates to factors
- Fixes a bug occuring when empty sites are combined with covariates (thanks to Marnix de Zeeuw)
- Speed improvements
- Minor bug fixes
 
version 1.1.5
- Now generates an error when the computed overdispersion is 0, and a warning when overdispersion < 1 (thanks to Oscar Ramírez for proving a data set where this happened)

version 1.1.4
- Fixed a bug caused by auto-removal of empty factorial sites (thanks to Tomás Murray)

version 1.1.3
- Fixed a bug resulting in wrong p-values output by the overall() function (thanks to Anna Marie Holand for reporting).

version 1.1.2
- Fixed problem when to many years have no or 0 counts, such that the expected value becomes effectively 0 as well. This case now generates an error message “Zero expected value” (thanks to Arco van Strien for proving this case)

version 1.1.1
- Fixed problem during stepwise regression when the algorithm wants to remove the first changepoint (thanks to Asaf Tsoar)
- Fixed computation of standard errors when model==1 (thanks to Asaf Tsoar) 

version 1.1.0
- Added backward compatibility option in overall() to match erroneous overall trend interpretation in original TRIM (thans for Lars Petterson to pointing out the differences in trend interpretation)

version 1.0.2
- Limit on regression parameters now equal to original TRIM (thanks to Lars Petterson)

version 1.0.1
- initial CRAN release